Bug 158354 - Advanced reminder dialog doesn't load default "type" at start
Summary: Advanced reminder dialog doesn't load default "type" at start
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-24 20:24 UTC by FiNeX
Modified: 2008-06-05 14:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2008-02-24 20:24:20 UTC
Version:           Revision 778835 (using Devel)
Installed from:    Compiled sources
OS:                Linux

The advanced reminder dialog start with the "display reminder" as default choice.
When you click to "Add" the "type" column on the list is set to unknown. It will be updated only when you'll select the time, or the type.
Comment 1 FiNeX 2008-06-05 14:39:23 UTC
SVN commit 817166 by finex:

Advanced reminder dialog load the default type

BUG: 158354



 M  +1 -0      koeditoralarms.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=817166