Advanced reminder dialog load the default type

BUG: 158354


svn path=/trunk/KDE/kdepim/; revision=817166